--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 }
 
 group = "org.openmicroscopy"
-version = "5.5.7-SNAPSHOT"
+version = "5.5.7"
 
 repositories {
     mavenLocal()
@@ -35,9 +35,7 @@ dependencies {
     testImplementation('org.openmicroscopy:omero-common-test:5.5.5')
     testImplementation('org.quartz-scheduler:quartz:2.2.1')
 
-    api("org.openmicroscopy:omero-server:5.5.6")
-
-    api("org.openmicroscopy:omero-model:5.6.0")
+    api("org.openmicroscopy:omero-server:5.6.0")
 
     implementation("com.sun.activation:javax.activation:1.2.0")
     implementation("org.ini4j:ini4j:0.4.1")
