--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,10 @@ dependencies {
     testImplementation("jmock:jmock:1.+")
     testImplementation("org.testng:testng:6.14.2")
     testImplementation('nl.javadude.assumeng:assumeng:1.2.4')
-    testImplementation('org.openmicroscopy:omero-common-test:5.5.7')
+    testImplementation('org.openmicroscopy:omero-common-test:5.5.8-SNAPSHOT')
     testImplementation('org.quartz-scheduler:quartz:2.2.1')
 
-    api("org.openmicroscopy:omero-server:5.6.1")
+    api("org.openmicroscopy:omero-server:5.6.2-SNAPSHOT")
 
     implementation("com.sun.activation:javax.activation:1.2.0")
     implementation("org.ini4j:ini4j:0.4.1")
