--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -52,7 +52,12 @@ jobs:
         if: ${{ env.gradle_version != '' }}
         shell: bash
       - name: Wrap without version
-        run: gradle wrapper
+        run: |
+          DIR=$PWD 
+          cd /tmp 
+          gradle wrapper
+          mv .gradle gradle gradlew $DIR
         if: ${{ env.gradle_version == '' }}
+        shell: bash
       - name: Run commands
         run: ./gradlew ${{ env.gradle_commands }}
