--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id "java-library"
     id "org.openmicroscopy.api" version "5.5.0"
-    id "org.openmicroscopy.dsl" version "5.5.0"
-    id "org.openmicroscopy.blitz" version "5.5.0"
+    id "org.openmicroscopy.dsl" version "5.5.1-SNAPSHOT"
+    id "org.openmicroscopy.blitz" version "5.5.1-SNAPSHOT"
     id "org.openmicroscopy.project" version "5.5.1"
     id "org.openmicroscopy.gradle.ice-builder.slice" version "1.5.0"
 }
@@ -34,7 +34,7 @@ dependencies {
     testImplementation('nl.javadude.assumeng:assumeng:1.2.4')
     testImplementation('org.openmicroscopy:omero-common-test:5.5.7')
     testImplementation('org.quartz-scheduler:quartz:2.2.1')
-
+    
     api("org.openmicroscopy:omero-server:5.6.1")
 
     implementation("com.sun.activation:javax.activation:1.2.0")
